--- a/index.html
+++ b/index.html
@@ -1,11 +1,227 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Luna</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Calculadora de Porcentagem</title>
+  <style>
+    :root {
+      --bg: #0f172a;
+      --card: #111827;
+      --text: #e5e7eb;
+      --muted: #9ca3af;
+      --accent: #22c55e;
+      --accent-pressed: #16a34a;
+      --error: #ef4444;
+      --input: #1f2937;
+      --border: #374151;
+    }
+    * { box-sizing: border-box; }
+    html, body {
+      height: 100%;
+      margin: 0;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Inter, Arial, sans-serif;
+      background: linear-gradient(180deg, #0b1220, var(--bg));
+      color: var(--text);
+    }
+    .wrap {
+      min-height: 100vh;
+      display: grid;
+      place-items: center;
+      padding: 24px;
+    }
+    .card {
+      width: 100%;
+      max-width: 420px;
+      background: var(--card);
+      border: 1px solid var(--border);
+      border-radius: 16px;
+      padding: 20px;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.35);
+    }
+    .title {
+      margin: 0 0 8px;
+      font-size: 1.25rem;
+      font-weight: 700;
+      text-align: center;
+    }
+    .subtitle {
+      margin: 0 0 16px;
+      font-size: 0.95rem;
+      color: var(--muted);
+      text-align: center;
+    }
+    .row {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 12px;
+      margin-bottom: 12px;
+    }
+    label {
+      font-size: 0.9rem;
+      color: var(--muted);
+      margin-bottom: 6px;
+      display: block;
+    }
+    input {
+      width: 100%;
+      padding: 12px 14px;
+      font-size: 1rem;
+      color: var(--text);
+      background: var(--input);
+      border: 1px solid var(--border);
+      border-radius: 10px;
+      outline: none;
+      -webkit-appearance: none;
+      appearance: none;
+    }
+    input:focus {
+      border-color: var(--accent);
+      box-shadow: 0 0 0 3px rgba(34, 197, 94, 0.15);
+    }
+    .actions {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 12px;
+      margin-top: 8px;
+    }
+    button {
+      padding: 12px;
+      font-size: 1rem;
+      font-weight: 600;
+      color: #0b1220;
+      background: var(--accent);
+      border: none;
+      border-radius: 10px;
+      cursor: pointer;
+      transition: transform 0.05s ease, background 0.2s ease;
+    }
+    button:active { transform: scale(0.98); }
+    button:hover { background: var(--accent-pressed); }
+    .secondary {
+      background: transparent;
+      color: var(--text);
+      border: 1px solid var(--border);
+    }
+    .result {
+      margin-top: 16px;
+      padding: 14px;
+      border-radius: 10px;
+      background: rgba(34, 197, 94, 0.08);
+      border: 1px solid rgba(34, 197, 94, 0.25);
+      font-size: 1rem;
+      text-align: center;
+      min-height: 48px;
+      display: grid;
+      place-items: center;
+    }
+    .error {
+      background: rgba(239, 68, 68, 0.1);
+      border-color: rgba(239, 68, 68, 0.35);
+      color: #fecaca;
+    }
+    .hint {
+      margin-top: 10px;
+      font-size: 0.85rem;
+      color: var(--muted);
+      text-align: center;
+    }
+    .footer {
+      margin-top: 14px;
+      font-size: 0.8rem;
+      color: var(--muted);
+      text-align: center;
+    }
+  </style>
 </head>
 <body>
-    Olá Mundo!!!
+  <div class="wrap">
+    <div class="card" role="form" aria-label="Calculadora de porcentagem">
+      <h1 class="title">Calculadora de porcentagem</h1>
+      <p class="subtitle">Descubra o aumento ou redução entre dois valores</p>
+
+      <div class="row">
+        <div>
+          <label for="valorInicial">Valor inicial (R$)</label>
+          <input id="valorInicial" type="number" inputmode="decimal" placeholder="Ex: 85" />
+        </div>
+        <div>
+          <label for="valorFinal">Valor final (R$)</label>
+          <input id="valorFinal" type="number" inputmode="decimal" placeholder="Ex: 90" />
+        </div>
+      </div>
+
+      <div class="actions">
+        <button id="btnCalcular">Calcular</button>
+        <button class="secondary" id="btnLimpar">Limpar</button>
+      </div>
+
+      <div id="resultado" class="result" aria-live="polite"></div>
+      <p class="hint">Fórmula: (Diferença ÷ Valor inicial) × 100</p>
+      <p class="footer">Suporta aumento e redução. Valores vazios ou zero mostram aviso.</p>
+    </div>
+  </div>
+
+  <script>
+    const inicialEl = document.getElementById('valorInicial');
+    const finalEl = document.getElementById('valorFinal');
+    const resultadoEl = document.getElementById('resultado');
+    const btnCalcular = document.getElementById('btnCalcular');
+    const btnLimpar = document.getElementById('btnLimpar');
+
+    function formatarMoeda(valor) {
+      if (!isFinite(valor)) return '';
+      return valor.toLocaleString('pt-BR', { style: 'currency', currency: 'BRL' });
+    }
+
+    function calcularPorcentagem() {
+      const inicial = parseFloat(inicialEl.value);
+      const final = parseFloat(finalEl.value);
+
+      if (isNaN(inicial) || isNaN(final)) {
+        resultadoEl.textContent = 'Por favor, preencha ambos os valores.';
+        resultadoEl.classList.add('error');
+        return;
+      }
+      if (inicial === 0) {
+        resultadoEl.textContent = 'O valor inicial não pode ser zero.';
+        resultadoEl.classList.add('error');
+        return;
+      }
+
+      const diferenca = final - inicial;
+      const porcentagem = (diferenca / inicial) * 100;
+
+      const tipo = diferenca > 0 ? 'Aumento' : (diferenca < 0 ? 'Redução' : 'Sem variação');
+      const sinal = diferenca > 0 ? '+' : (diferenca < 0 ? '−' : '');
+
+      resultadoEl.classList.remove('error');
+      resultadoEl.innerHTML = `
+        <div>
+          <strong>${tipo}:</strong> ${sinal}${porcentagem.toFixed(2)}%<br/>
+          <strong>Diferença:</strong> ${formatarMoeda(diferenca)}<br/>
+          <strong>De:</strong> ${formatarMoeda(inicial)} <strong>para</strong> ${formatarMoeda(final)}
+        </div>
+      `;
+    }
+
+    function limparCampos() {
+      inicialEl.value = '';
+      finalEl.value = '';
+      resultadoEl.textContent = '';
+      resultadoEl.classList.remove('error');
+      inicialEl.focus();
+    }
+
+    btnCalcular.addEventListener('click', calcularPorcentagem);
+    btnLimpar.addEventListener('click', limparCampos);
+
+    // Enter para calcular
+    [inicialEl, finalEl].forEach(el => {
+      el.addEventListener('keydown', (e) => {
+        if (e.key === 'Enter') calcularPorcentagem();
+      });
+    });
+  </script>
 </body>
 </html>
