--- a/index.html
+++ b/index.html
@@ -5,62 +5,109 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Calculadora de Porcentagem</title>
   <style>
+    :root {
+      --bg-light: #f2f2f2;
+      --card-light: #ffffff;
+      --text-light: #333;
+      --accent: #4CAF50;
+
+      --bg-dark: #0f172a;
+      --card-dark: #1e293b;
+      --text-dark: #e5e7eb;
+    }
+
     body {
-      font-family: Arial, sans-serif;
-      background: #f2f2f2;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Inter, Arial, sans-serif;
       margin: 0;
       padding: 0;
       display: flex;
       justify-content: center;
       align-items: center;
       min-height: 100vh;
+      background: var(--bg-light);
+      color: var(--text-light);
     }
+
+    @media (prefers-color-scheme: dark) {
+      body {
+        background: var(--bg-dark);
+        color: var(--text-dark);
+      }
+      .container {
+        background: var(--card-dark);
+        color: var(--text-dark);
+        border: 1px solid #334155;
+      }
+      input {
+        background: #0f172a;
+        color: var(--text-dark);
+        border: 1px solid #334155;
+      }
+      button {
+        background: var(--accent);
+        color: #fff;
+      }
+    }
+
     .container {
-      background: #fff;
+      background: var(--card-light);
       padding: 20px;
       border-radius: 12px;
       box-shadow: 0 4px 12px rgba(0,0,0,0.15);
       width: 90%;
       max-width: 420px;
     }
+
     h2 {
       text-align: center;
       margin-bottom: 16px;
-      color: #333;
     }
+
     label {
       display: block;
       margin-top: 12px;
-      color: #555;
+      font-weight: 500;
     }
+
     input {
       width: 100%;
-      padding: 10px;
-      margin-top: 5px;
+      padding: 12px;
+      margin-top: 6px;
       font-size: 16px;
       border: 1px solid #ccc;
-      border-radius: 6px;
+      border-radius: 8px;
+      outline: none;
     }
+
+    input:focus {
+      border-color: var(--accent);
+      box-shadow: 0 0 0 2px rgba(76, 175, 80, 0.3);
+    }
+
     button {
       width: 100%;
       margin-top: 16px;
-      padding: 12px;
-      background: #4CAF50;
+      padding: 14px;
+      background: var(--accent);
       color: white;
       font-size: 16px;
       border: none;
-      border-radius: 6px;
+      border-radius: 8px;
       cursor: pointer;
+      font-weight: 600;
     }
+
     button:hover {
       background: #45a049;
     }
+
     .resultado {
       margin-top: 16px;
       font-size: 16px;
       text-align: center;
-      color: #333;
+      font-weight: 500;
     }
+
     .divider {
       margin: 20px 0;
       border-top: 1px solid #ddd;
@@ -71,7 +118,7 @@
   <div class="container">
     <h2>Calculadora de Porcentagem</h2>
 
-    <!-- Primeira funcionalidade -->
+    <!-- Diferença percentual -->
     <label for="valorInicial">Valor Inicial (R$):</label>
     <input type="number" id="valorInicial" placeholder="Ex: 85">
 
@@ -83,7 +130,7 @@
 
     <div class="divider"></div>
 
-    <!-- Segunda funcionalidade -->
+    <!-- Valor final a partir de porcentagem -->
     <label for="valorBase">Valor Base (R$):</label>
     <input type="number" id="valorBase" placeholder="Ex: 85">
 
