--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     @media (prefers-color-scheme: dark) {
       body {
         background: #0f172a;
-        color: #f9fafb; /* texto mais claro mas com contraste */
+        color: #e2e8f0;; /* texto mais claro mas com contraste */
       }
       .container {
         background: #1e293b;
@@ -32,7 +32,7 @@
       }
       input {
         background: #0f172a;
-        color: #f9fafb;
+        color: #e2e8f0;
         border: 1px solid #475569;
       }
     }
