Change input text color to match background

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       }
       input {
         background: #0f172a;
-        color: #141A24;
+        color: #0f172a;
         border: 1px solid #475569;
       }
     }
