--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       align-items: center;
       min-height: 100vh;
       background: #f2f2f2;
-      color: #222;
+      color: #0f172a;
     }
 
     @media (prefers-color-scheme: dark) {
