Change input text color to light gray

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       }
       input {
         background: #0f172a;
-        color: #0f172a;
+        color: #e2e8f0;
         border: 1px solid #475569;
       }
     }
